--- a/Omos.html
+++ b/Omos.html
@@ -21,7 +21,7 @@
                     <li><a href="Omos.html">Om os</a></li>
                     <li><a href="mindfulness.html">Mindfulness</a></li>
                     <li><a href="meditation.html">Meditation</a></li>
-                    <li><a href="Contact.html">Kontakt Os</a></li>
+                    <li><a href="contact.html">Kontakt Os</a></li>
                 </ul>
                 <button class="nav_toggle-btn" id="nav_toggle-open"><i class="uil uil-bars"></i></button>
                 <button class="nav_toggle-btn" id="nav_toggle-close"><i class="uil uil-multiply"></i></button>
